<resources>
    <string name="app_name">Sleep cycle alarm</string>


    <!--Generals-->
    <string name="alarm">Alarm</string>
    <string name="wakeUp">WAKE UP!</string>
    <string name="setUpAlarm">Set up</string>
    <string name="alarmOn">Alarm ON</string>
    <string name="alarmOff">Alarm OFF</string>
    <string name="alarmDismissed">Alarm dismissed</string>
    <string name="tips"><i>Tap to change, hold to reset to default.</i></string>
    <string name="waking_time">Waking time</string>
    <string name="bed_time"> Bed time</string>
    <string name="sleep_cycles">Sleep cycles</string>
    <string name="cycles">cycles</string>
    <string name="cycle">cycle</string>
    <string name="minutes_falling_asleep">Minutes falling asleep </string>
    <string name="ringtone">Ringtone</string>
    <string name="confirm">Confirm</string>
    <string name="change">Change</string>
    <string name="cancel">Cancel</string>
    <string name="remove">Remove</string>
    <string name="get_waking_time">GET  WAKING  TIME</string>
    <string name="choose_waking_time">Choose waking time</string>
    <string name="choose_bed_time">Choose bed time</string>
    <string name="choose_song">Choose a ringtone</string>
    <string name="total_sleeping_time">Total sleeping time</string>

    <!--Header-->
    <string name="next_bed_time">Next bed time in:</string>
    <string name="next_alarm_time">Alarm rings in:</string>
    <string name="all_alarms_off">All alarms are off</string>
    <string name="image_header_description">Header image</string>


    <!--AlarmActivity-->
    <string name="dismiss">Dismiss</string>
    <string name="snooze">Snooze\n 5 min</string>
    <string name="alarm_snoozed">Alarm snoozed</string>
    <string name="cancel_alarm">Cancel alarm</string>

    <!--Known waking up time strings card view strings-->
    <string name="calculated_bed_time">Calculated bed time:</string>
    <string name="minutes">minutes</string>
    <string name="minute">minute</string>
    <string name="hour">hour</string>
    <string name="hours">hours</string>
    <string name="knownWakeUpTimeText">Know when you have to wake up?\nCalculate <i>bed time</i>.</string>
    <string name="removeDialog">Remove this alarm configuration?</string>
    <string name="positiveDialog">Remove</string>
    <string name="negativeDialog">Cancel</string>

    <!--Known bed time page strings-->
    <string name="knownBedTimeText">Bed time now?\nCalculate <i>wake up time</i>.</string>
    <string name="calcWakingTime">Calculated waking time: </string>

    <!--Nap time-->
    <string name="nap_time_title_no_nap_set">Take a nap</string>
    <string name="nap_time_title_nap_set">Taking a nap…</string>
    <string name="nap_time_ends">Ends at</string>
    <string name="nap_time_duration">Duration</string>
    <string name="nap_time_choose_duration">Nap duration</string>
    <string name="nap_ends_in">Nap ends in</string>

    <!--SetUpAlarmActivity-->
    <string name="noRingtoneSelected">No ringtone selected</string>
    <string name="selectWakeUpTime">Select a waking up time</string>
    <string name="wakingUpTime">Waking up time set for:</string>
    <string name="chooseARingtone">Choose a ringtone</string>
    <string name="selectedRingtone">Selected ringtone</string>
    <string name="sleepCycles">Number of sleep cycles </string>
    <string name="browse">browse</string>
    <string name="createAlarm">Create</string>

    <!--Alert dialog getting started
    //TODO Tips messages to be updated-->
    <string name="alert_dialog_getting_started_title">Setting up your first alarm</string>
    <string name="alert_dialog_getting_started_message">Be careful at sleep cycles and estimated time for falling asleep</string>
    <string name="alert_dialog_getting_started_positiveButton">Got it!</string>

    <!--song list-->
    <string name="song_horn">Horn</string>
    <string name="song_all_that"> All that</string>
    <string name="song_a_new_beginning">A new beginning</string>
    <string name="song_ceausescu">Ceauseascu</string>
    <string name="song_cig_swaag">Cig swag</string>
    <string name="song_creative_minds">Creative minds</string>
    <string name="song_dubstep">Dubstep</string>
    <string name="song_funny_song">Funny song</string>
    <string name="song_hey">Hey!</string>
    <string name="song_skull_fire">Skull fire</string>
    <string name="song_spaceship_alarm">Spaceship alarm</string>
    <string name="song_summer">Summer</string>

    <!--Alarm-->
    <string name="channel_name_alarm">Alarm notification</string>
    <string name="channel_description_alarm">Make alarms sound and pop out.</string>
    <string name="channel_name_reminder">Bed time reminder notification and nap time reminder</string>
    <string name="channel_description_reminder">Notification which reminds that bed time is coming soon.</string>
    <string name="channel_name_snooze">Snooze or Nap time notification</string>
    <string name="channel_description_snooze">Notifies when alarm is on snooze state or there is an ongoing nap time alarm.</string>

    <string name="notification_title_snooze">Alarm snoozed</string>
    <string name="notification_content_snooze">Alarm is snoozed for 5 minutes.</string>

</resources>
