<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <RadioGroup
        android:id="@+id/group_radio_songs"
        android:padding="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/horn_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/song_horn"
            android:checked="false"
            android:textSize="20sp" />
        <RadioButton
            android:id="@+id/all_that_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/song_all_that"
            android:checked="false"
            android:textSize="20sp" />
        <RadioButton
            android:id="@+id/a_new_beginning_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/song_a_new_beginning"
            android:checked="false"
            android:textSize="20sp"/>
        <RadioButton
            android:id="@+id/ceausescu_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/song_ceausescu"
            android:checked="true"
            android:textSize="20sp"/>
        <RadioButton
            android:id="@+id/cig_swaag_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/song_cig_swaag"
            android:checked="false"
            android:textSize="20sp"/>
        <RadioButton
            android:id="@+id/creative_minds_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/song_creative_minds"
            android:checked="false"
            android:textSize="20sp"/>
        <RadioButton
            android:id="@+id/dubstep_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/song_dubstep"
            android:checked="false"
            android:textSize="20sp"/>
        <RadioButton
            android:id="@+id/funny_song_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/song_funny_song"
            android:checked="false"
            android:textSize="20sp"/>
        <RadioButton
            android:id="@+id/hey_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/song_hey"
            android:checked="false"
            android:textSize="20sp"/>
        <RadioButton
            android:id="@+id/skull_fire_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/song_skull_fire"
            android:checked="false"
            android:textSize="20sp"/>
        <RadioButton
            android:id="@+id/spaceship_alarm_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/song_spaceship_alarm"
            android:checked="false"
            android:textSize="20sp"/>
        <RadioButton
            android:id="@+id/summer_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/song_summer"
            android:checked="false"
            android:textSize="20sp"/>
    </RadioGroup>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/confirm_song"
            android:layout_marginBottom="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/round_done_24"
            android:layout_gravity="center"
            android:clickable="true"
            android:focusable="true"
            app:backgroundTint="@color/colorPrimaryDark"
            app:fabSize="mini" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>