<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <TextView
            android:id="@+id/pick_time_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_marginTop="12dp"
            android:text="@string/selectWakeUpTime"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TimePicker
            android:id="@+id/spinner_time_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/pick_time_textView"
            android:timePickerMode="spinner"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pick_time_textView"
            app:layout_constraintEnd_toEndOf="parent"/>


        <TextView
            android:id="@+id/textView_sleepCycle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sleepCycles"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner_time_picker"
            app:layout_constraintEnd_toStartOf="@+id/spinner_numberSleepCycles"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"/>

        <Spinner
            android:id="@+id/spinner_numberSleepCycles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            app:layout_constraintTop_toTopOf="@+id/textView_sleepCycle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/textView_sleepCycle"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp" />
        <View
            android:id="@+id/separator_1"
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintTop_toBottomOf="@+id/textView_sleepCycle"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"/>

        <TextView
            android:id="@+id/textView_minutesFallingAsleep"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/minutes_falling_asleep"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintTop_toBottomOf="@+id/separator_1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/spinner_minutesOfFallingAsleep"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"/>

        <Spinner
            android:id="@+id/spinner_minutesOfFallingAsleep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@+id/textView_minutesFallingAsleep"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/textView_minutesFallingAsleep"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp" />

        <View
            android:id="@+id/separator_2"
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintTop_toBottomOf="@+id/textView_minutesFallingAsleep"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"/>

        <TextView
        android:id="@+id/songNameChosen_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/noRingtoneSelected"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintTop_toTopOf="@+id/browse"
        app:layout_constraintBottom_toBottomOf="@+id/browse"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/browse"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp" />

        <Button
            android:id="@+id/browse"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/browse"
            android:textAllCaps="false"
            android:textStyle="italic"
            android:textAlignment="center"
            android:background="@drawable/custom_button_ripple"
            app:layout_constraintTop_toBottomOf="@+id/separator_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/songNameChosen_textView"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"/>

        <View
            android:id="@+id/separator_3"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintTop_toBottomOf="@+id/browse"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"/>

        <Button
            android:id="@+id/cancel_alarm_set_up_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintTop_toBottomOf="@+id/separator_3"
            app:layout_constraintStart_toStartOf="@+id/separator_3"
            app:layout_constraintEnd_toStartOf="@+id/create_alarm_wake_up_time"
            android:layout_marginEnd="20dp"/>

        <Button
            android:id="@+id/create_alarm_wake_up_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintTop_toBottomOf="@+id/separator_3"
            app:layout_constraintStart_toEndOf="@id/cancel_alarm_set_up_time"
            app:layout_constraintEnd_toEndOf="@id/separator_3"
            android:layout_marginStart="20dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>

